// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMain - Snapshots > matches snapshot for quote repost by current user (with content) 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-testid="repost-header"
    >
      You reposted
    </div>
    <div
      data-class-name="flex min-w-0 flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-header"
      >
        PostHeader 
        me:quote-repost-1
      </div>
      <div
        data-testid="post-content"
      >
        PostContent 
        me:quote-repost-1
      </div>
      <div
        data-class-name="flex-col items-start gap-2 md:flex-row md:justify-between md:gap-4 md:items-start"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="me:quote-repost-1"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        >
          ClickableTagsList 
          me:quote-repost-1
        </div>
        <div
          data-class-name="shrink-0 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          me:quote-repost-1
          <button
            data-testid="tag-button"
          >
            Tag
          </button>
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot for repost by another user 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-class-name="flex min-w-0 flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-header"
      >
        PostHeader 
        other-user:repost-1
      </div>
      <div
        data-testid="post-content"
      >
        PostContent 
        other-user:repost-1
      </div>
      <div
        data-class-name="flex-col items-start gap-2 md:flex-row md:justify-between md:gap-4 md:items-start"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="other-user:repost-1"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        >
          ClickableTagsList 
          other-user:repost-1
        </div>
        <div
          data-class-name="shrink-0 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          other-user:repost-1
          <button
            data-testid="tag-button"
          >
            Tag
          </button>
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot for simple repost by current user (no content) 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-testid="repost-header"
    >
      You reposted
    </div>
    <div
      data-class-name="flex min-w-0 flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-content"
      >
        PostContent 
        me:simple-repost-1
      </div>
      <div
        data-class-name="flex-col items-start gap-2 md:flex-row md:justify-between md:gap-4 md:items-start"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="me:simple-repost-1"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        >
          ClickableTagsList 
          me:simple-repost-1
        </div>
        <div
          data-class-name="shrink-0 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          me:simple-repost-1
          <button
            data-testid="tag-button"
          >
            Tag
          </button>
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot with default state 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-class-name="flex min-w-0 flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-header"
      >
        PostHeader 
        post-123
      </div>
      <div
        data-testid="post-content"
      >
        PostContent 
        post-123
      </div>
      <div
        data-class-name="flex-col items-start gap-2 md:flex-row md:justify-between md:gap-4 md:items-start"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="post-123"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        >
          ClickableTagsList 
          post-123
        </div>
        <div
          data-class-name="shrink-0 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-123
          <button
            data-testid="tag-button"
          >
            Tag
          </button>
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot with deleted post 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-testid="post-deleted"
    >
      PostDeleted
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot with isReply false 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-class-name="flex min-w-0 flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-header"
      >
        PostHeader 
        post-no-reply-456
      </div>
      <div
        data-testid="post-content"
      >
        PostContent 
        post-no-reply-456
      </div>
      <div
        data-class-name="flex-col items-start gap-2 md:flex-row md:justify-between md:gap-4 md:items-start"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="post-no-reply-456"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        >
          ClickableTagsList 
          post-no-reply-456
        </div>
        <div
          data-class-name="shrink-0 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-no-reply-456
          <button
            data-testid="tag-button"
          >
            Tag
          </button>
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot with isReply true 1`] = `
<div
  data-class-name="relative flex min-w-0 cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="w-3 shrink-0"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-height="150"
      data-testid="thread-connector"
      data-variant="regular"
    >
      ThreadConnector
    </div>
  </div>
  <div
    data-class-name="min-w-0 flex-1 gap-0 rounded-md py-0"
    data-testid="card"
  >
    <div
      data-class-name="flex min-w-0 flex-col gap-4 p-6"
      data-testid="card-content"
    >
      <div
        data-testid="post-header"
      >
        PostHeader 
        post-reply-123
      </div>
      <div
        data-testid="post-content"
      >
        PostContent 
        post-reply-123
      </div>
      <div
        data-class-name="flex-col items-start gap-2 md:flex-row md:justify-between md:gap-4 md:items-start"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="post-reply-123"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        >
          ClickableTagsList 
          post-reply-123
        </div>
        <div
          data-class-name="shrink-0 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-reply-123
          <button
            data-testid="tag-button"
          >
            Tag
          </button>
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
